@@ -1,3 +1,9 @@
+2003-01-09  James Henstridge  <james@daa.com.au>
+
+	* configure.in: look for gconftool.
+
+	* src/fontilus.schemas.in: add schemas to set up thumbnailing.
+
 2002-12-28  James Henstridge  <james@daa.com.au>
 
 	* src/font-view.c (main): actually turn on internationalisation.
